[03] PROJEKT/src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DCOLON

Grammar

Rule 0     S' -> program
Rule 1     program -> item_list
Rule 2     item_list -> item_list item
Rule 3     item_list -> empty
Rule 4     item -> fn_def
Rule 5     fn_def -> FN IDENT LPAREN param_list RPAREN ARROW type block
Rule 6     fn_def -> FN IDENT LPAREN param_list RPAREN block
Rule 7     param_list -> empty
Rule 8     param_list -> param
Rule 9     param_list -> param_list COMMA param
Rule 10    param -> IDENT COLON type
Rule 11    type -> IDENT
Rule 12    type -> AMP type
Rule 13    type -> AMP MUT type
Rule 14    type -> AMP LIFETIME type
Rule 15    type -> AMP LIFETIME MUT type
Rule 16    block -> LBRACE stmt_list RBRACE
Rule 17    block -> LBRACE stmt_list expr RBRACE
Rule 18    stmt_list -> stmt_list stmt
Rule 19    stmt_list -> empty
Rule 20    stmt -> let_stmt
Rule 21    stmt -> expr_stmt
Rule 22    stmt -> return_stmt
Rule 23    stmt -> if_stmt
Rule 24    stmt -> while_stmt
Rule 25    stmt -> loop_stmt
Rule 26    stmt -> break_stmt
Rule 27    let_stmt -> LET opt_mut IDENT opt_type_annotation opt_init SEMICOLON
Rule 28    opt_mut -> MUT
Rule 29    opt_mut -> empty
Rule 30    opt_type_annotation -> COLON type
Rule 31    opt_type_annotation -> empty
Rule 32    opt_init -> ASSIGN expr
Rule 33    opt_init -> empty
Rule 34    expr_stmt -> expr SEMICOLON
Rule 35    return_stmt -> RETURN expr SEMICOLON
Rule 36    return_stmt -> RETURN SEMICOLON
Rule 37    if_stmt -> IF expr block
Rule 38    if_stmt -> IF expr block ELSE block
Rule 39    if_stmt -> IF expr block ELSE if_stmt
Rule 40    while_stmt -> WHILE expr block
Rule 41    loop_stmt -> LOOP block
Rule 42    break_stmt -> BREAK SEMICOLON
Rule 43    expr -> IDENT ASSIGN expr
Rule 44    expr -> expr OR expr
Rule 45    expr -> expr AMP AMP expr
Rule 46    expr -> expr EQ expr
Rule 47    expr -> expr NEQ expr
Rule 48    expr -> expr LT expr
Rule 49    expr -> expr GT expr
Rule 50    expr -> expr LEQ expr
Rule 51    expr -> expr GEQ expr
Rule 52    expr -> expr PLUS expr
Rule 53    expr -> expr MINUS expr
Rule 54    expr -> expr STAR expr
Rule 55    expr -> expr SLASH expr
Rule 56    expr -> expr PERCENT expr
Rule 57    expr -> MINUS expr
Rule 58    expr -> NOT expr
Rule 59    expr -> AMP expr
Rule 60    expr -> AMP MUT expr
Rule 61    expr -> INTEGER
Rule 62    expr -> FLOAT
Rule 63    expr -> STRING
Rule 64    expr -> TRUE
Rule 65    expr -> FALSE
Rule 66    expr -> IDENT
Rule 67    expr -> LPAREN expr RPAREN
Rule 68    expr -> IDENT LPAREN arg_list RPAREN
Rule 69    expr -> expr DOT IDENT LPAREN arg_list RPAREN
Rule 70    arg_list -> empty
Rule 71    arg_list -> expr
Rule 72    arg_list -> arg_list COMMA expr
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AMP                  : 12 13 14 15 45 45 59 60
ARROW                : 5
ASSIGN               : 32 43
BREAK                : 42
COLON                : 10 30
COMMA                : 9 72
DCOLON               : 
DOT                  : 69
ELSE                 : 38 39
EQ                   : 46
FALSE                : 65
FLOAT                : 62
FN                   : 5 6
GEQ                  : 51
GT                   : 49
IDENT                : 5 6 10 11 27 43 66 68 69
IF                   : 37 38 39
INTEGER              : 61
LBRACE               : 16 17
LEQ                  : 50
LET                  : 27
LIFETIME             : 14 15
LOOP                 : 41
LPAREN               : 5 6 67 68 69
LT                   : 48
MINUS                : 53 57
MUT                  : 13 15 28 60
NEQ                  : 47
NOT                  : 58
OR                   : 44
PERCENT              : 56
PLUS                 : 52
RBRACE               : 16 17
RETURN               : 35 36
RPAREN               : 5 6 67 68 69
SEMICOLON            : 27 34 35 36 42
SLASH                : 55
STAR                 : 54
STRING               : 63
TRUE                 : 64
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

arg_list             : 68 69 72
block                : 5 6 37 38 38 39 40 41
break_stmt           : 26
empty                : 3 7 19 29 31 33 70
expr                 : 17 32 34 35 37 38 39 40 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 58 59 60 67 69 71 72
expr_stmt            : 21
fn_def               : 4
if_stmt              : 23 39
item                 : 2
item_list            : 1 2
let_stmt             : 20
loop_stmt            : 25
opt_init             : 27
opt_mut              : 27
opt_type_annotation  : 27
param                : 8 9
param_list           : 5 6 9
program              : 0
return_stmt          : 22
stmt                 : 18
stmt_list            : 16 17 18
type                 : 5 10 12 13 14 15 30
while_stmt           : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . item_list
    (2) item_list -> . item_list item
    (3) item_list -> . empty
    (73) empty -> .

    FN              reduce using rule 73 (empty -> .)
    $end            reduce using rule 73 (empty -> .)

    program                        shift and go to state 1
    item_list                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> item_list .
    (2) item_list -> item_list . item
    (4) item -> . fn_def
    (5) fn_def -> . FN IDENT LPAREN param_list RPAREN ARROW type block
    (6) fn_def -> . FN IDENT LPAREN param_list RPAREN block

    $end            reduce using rule 1 (program -> item_list .)
    FN              shift and go to state 6

    item                           shift and go to state 4
    fn_def                         shift and go to state 5

state 3

    (3) item_list -> empty .

    FN              reduce using rule 3 (item_list -> empty .)
    $end            reduce using rule 3 (item_list -> empty .)


state 4

    (2) item_list -> item_list item .

    FN              reduce using rule 2 (item_list -> item_list item .)
    $end            reduce using rule 2 (item_list -> item_list item .)


state 5

    (4) item -> fn_def .

    FN              reduce using rule 4 (item -> fn_def .)
    $end            reduce using rule 4 (item -> fn_def .)


state 6

    (5) fn_def -> FN . IDENT LPAREN param_list RPAREN ARROW type block
    (6) fn_def -> FN . IDENT LPAREN param_list RPAREN block

    IDENT           shift and go to state 7


state 7

    (5) fn_def -> FN IDENT . LPAREN param_list RPAREN ARROW type block
    (6) fn_def -> FN IDENT . LPAREN param_list RPAREN block

    LPAREN          shift and go to state 8


state 8

    (5) fn_def -> FN IDENT LPAREN . param_list RPAREN ARROW type block
    (6) fn_def -> FN IDENT LPAREN . param_list RPAREN block
    (7) param_list -> . empty
    (8) param_list -> . param
    (9) param_list -> . param_list COMMA param
    (73) empty -> .
    (10) param -> . IDENT COLON type

    RPAREN          reduce using rule 73 (empty -> .)
    COMMA           reduce using rule 73 (empty -> .)
    IDENT           shift and go to state 9

    param_list                     shift and go to state 10
    empty                          shift and go to state 11
    param                          shift and go to state 12

state 9

    (10) param -> IDENT . COLON type

    COLON           shift and go to state 13


state 10

    (5) fn_def -> FN IDENT LPAREN param_list . RPAREN ARROW type block
    (6) fn_def -> FN IDENT LPAREN param_list . RPAREN block
    (9) param_list -> param_list . COMMA param

    RPAREN          shift and go to state 14
    COMMA           shift and go to state 15


state 11

    (7) param_list -> empty .

    RPAREN          reduce using rule 7 (param_list -> empty .)
    COMMA           reduce using rule 7 (param_list -> empty .)


state 12

    (8) param_list -> param .

    RPAREN          reduce using rule 8 (param_list -> param .)
    COMMA           reduce using rule 8 (param_list -> param .)


state 13

    (10) param -> IDENT COLON . type
    (11) type -> . IDENT
    (12) type -> . AMP type
    (13) type -> . AMP MUT type
    (14) type -> . AMP LIFETIME type
    (15) type -> . AMP LIFETIME MUT type

    IDENT           shift and go to state 16
    AMP             shift and go to state 18

    type                           shift and go to state 17

state 14

    (5) fn_def -> FN IDENT LPAREN param_list RPAREN . ARROW type block
    (6) fn_def -> FN IDENT LPAREN param_list RPAREN . block
    (16) block -> . LBRACE stmt_list RBRACE
    (17) block -> . LBRACE stmt_list expr RBRACE

    ARROW           shift and go to state 19
    LBRACE          shift and go to state 21

    block                          shift and go to state 20

state 15

    (9) param_list -> param_list COMMA . param
    (10) param -> . IDENT COLON type

    IDENT           shift and go to state 9

    param                          shift and go to state 22

state 16

    (11) type -> IDENT .

    RPAREN          reduce using rule 11 (type -> IDENT .)
    COMMA           reduce using rule 11 (type -> IDENT .)
    LBRACE          reduce using rule 11 (type -> IDENT .)
    ASSIGN          reduce using rule 11 (type -> IDENT .)
    SEMICOLON       reduce using rule 11 (type -> IDENT .)


state 17

    (10) param -> IDENT COLON type .

    RPAREN          reduce using rule 10 (param -> IDENT COLON type .)
    COMMA           reduce using rule 10 (param -> IDENT COLON type .)


state 18

    (12) type -> AMP . type
    (13) type -> AMP . MUT type
    (14) type -> AMP . LIFETIME type
    (15) type -> AMP . LIFETIME MUT type
    (11) type -> . IDENT
    (12) type -> . AMP type
    (13) type -> . AMP MUT type
    (14) type -> . AMP LIFETIME type
    (15) type -> . AMP LIFETIME MUT type

    MUT             shift and go to state 24
    LIFETIME        shift and go to state 25
    IDENT           shift and go to state 16
    AMP             shift and go to state 18

    type                           shift and go to state 23

state 19

    (5) fn_def -> FN IDENT LPAREN param_list RPAREN ARROW . type block
    (11) type -> . IDENT
    (12) type -> . AMP type
    (13) type -> . AMP MUT type
    (14) type -> . AMP LIFETIME type
    (15) type -> . AMP LIFETIME MUT type

    IDENT           shift and go to state 16
    AMP             shift and go to state 18

    type                           shift and go to state 26

state 20

    (6) fn_def -> FN IDENT LPAREN param_list RPAREN block .

    FN              reduce using rule 6 (fn_def -> FN IDENT LPAREN param_list RPAREN block .)
    $end            reduce using rule 6 (fn_def -> FN IDENT LPAREN param_list RPAREN block .)


state 21

    (16) block -> LBRACE . stmt_list RBRACE
    (17) block -> LBRACE . stmt_list expr RBRACE
    (18) stmt_list -> . stmt_list stmt
    (19) stmt_list -> . empty
    (73) empty -> .

    RBRACE          reduce using rule 73 (empty -> .)
    IDENT           reduce using rule 73 (empty -> .)
    MINUS           reduce using rule 73 (empty -> .)
    NOT             reduce using rule 73 (empty -> .)
    AMP             reduce using rule 73 (empty -> .)
    INTEGER         reduce using rule 73 (empty -> .)
    FLOAT           reduce using rule 73 (empty -> .)
    STRING          reduce using rule 73 (empty -> .)
    TRUE            reduce using rule 73 (empty -> .)
    FALSE           reduce using rule 73 (empty -> .)
    LPAREN          reduce using rule 73 (empty -> .)
    LET             reduce using rule 73 (empty -> .)
    RETURN          reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    LOOP            reduce using rule 73 (empty -> .)
    BREAK           reduce using rule 73 (empty -> .)

    stmt_list                      shift and go to state 27
    empty                          shift and go to state 28

state 22

    (9) param_list -> param_list COMMA param .

    RPAREN          reduce using rule 9 (param_list -> param_list COMMA param .)
    COMMA           reduce using rule 9 (param_list -> param_list COMMA param .)


state 23

    (12) type -> AMP type .

    RPAREN          reduce using rule 12 (type -> AMP type .)
    COMMA           reduce using rule 12 (type -> AMP type .)
    LBRACE          reduce using rule 12 (type -> AMP type .)
    ASSIGN          reduce using rule 12 (type -> AMP type .)
    SEMICOLON       reduce using rule 12 (type -> AMP type .)


state 24

    (13) type -> AMP MUT . type
    (11) type -> . IDENT
    (12) type -> . AMP type
    (13) type -> . AMP MUT type
    (14) type -> . AMP LIFETIME type
    (15) type -> . AMP LIFETIME MUT type

    IDENT           shift and go to state 16
    AMP             shift and go to state 18

    type                           shift and go to state 29

state 25

    (14) type -> AMP LIFETIME . type
    (15) type -> AMP LIFETIME . MUT type
    (11) type -> . IDENT
    (12) type -> . AMP type
    (13) type -> . AMP MUT type
    (14) type -> . AMP LIFETIME type
    (15) type -> . AMP LIFETIME MUT type

    MUT             shift and go to state 31
    IDENT           shift and go to state 16
    AMP             shift and go to state 18

    type                           shift and go to state 30

state 26

    (5) fn_def -> FN IDENT LPAREN param_list RPAREN ARROW type . block
    (16) block -> . LBRACE stmt_list RBRACE
    (17) block -> . LBRACE stmt_list expr RBRACE

    LBRACE          shift and go to state 21

    block                          shift and go to state 32

state 27

    (16) block -> LBRACE stmt_list . RBRACE
    (17) block -> LBRACE stmt_list . expr RBRACE
    (18) stmt_list -> stmt_list . stmt
    (43) expr -> . IDENT ASSIGN expr
    (44) expr -> . expr OR expr
    (45) expr -> . expr AMP AMP expr
    (46) expr -> . expr EQ expr
    (47) expr -> . expr NEQ expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GT expr
    (50) expr -> . expr LEQ expr
    (51) expr -> . expr GEQ expr
    (52) expr -> . expr PLUS expr
    (53) expr -> . expr MINUS expr
    (54) expr -> . expr STAR expr
    (55) expr -> . expr SLASH expr
    (56) expr -> . expr PERCENT expr
    (57) expr -> . MINUS expr
    (58) expr -> . NOT expr
    (59) expr -> . AMP expr
    (60) expr -> . AMP MUT expr
    (61) expr -> . INTEGER
    (62) expr -> . FLOAT
    (63) expr -> . STRING
    (64) expr -> . TRUE
    (65) expr -> . FALSE
    (66) expr -> . IDENT
    (67) expr -> . LPAREN expr RPAREN
    (68) expr -> . IDENT LPAREN arg_list RPAREN
    (69) expr -> . expr DOT IDENT LPAREN arg_list RPAREN
    (20) stmt -> . let_stmt
    (21) stmt -> . expr_stmt
    (22) stmt -> . return_stmt
    (23) stmt -> . if_stmt
    (24) stmt -> . while_stmt
    (25) stmt -> . loop_stmt
    (26) stmt -> . break_stmt
    (27) let_stmt -> . LET opt_mut IDENT opt_type_annotation opt_init SEMICOLON
    (34) expr_stmt -> . expr SEMICOLON
    (35) return_stmt -> . RETURN expr SEMICOLON
    (36) return_stmt -> . RETURN SEMICOLON
    (37) if_stmt -> . IF expr block
    (38) if_stmt -> . IF expr block ELSE block
    (39) if_stmt -> . IF expr block ELSE if_stmt
    (40) while_stmt -> . WHILE expr block
    (41) loop_stmt -> . LOOP block
    (42) break_stmt -> . BREAK SEMICOLON

    RBRACE          shift and go to state 33
    IDENT           shift and go to state 36
    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    AMP             shift and go to state 37
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44
    LPAREN          shift and go to state 45
    LET             shift and go to state 53
    RETURN          shift and go to state 54
    IF              shift and go to state 55
    WHILE           shift and go to state 56
    LOOP            shift and go to state 57
    BREAK           shift and go to state 58

    expr                           shift and go to state 34
    stmt                           shift and go to state 35
    let_stmt                       shift and go to state 46
    expr_stmt                      shift and go to state 47
    return_stmt                    shift and go to state 48
    if_stmt                        shift and go to state 49
    while_stmt                     shift and go to state 50
    loop_stmt                      shift and go to state 51
    break_stmt                     shift and go to state 52

state 28

    (19) stmt_list -> empty .

    RBRACE          reduce using rule 19 (stmt_list -> empty .)
    IDENT           reduce using rule 19 (stmt_list -> empty .)
    MINUS           reduce using rule 19 (stmt_list -> empty .)
    NOT             reduce using rule 19 (stmt_list -> empty .)
    AMP             reduce using rule 19 (stmt_list -> empty .)
    INTEGER         reduce using rule 19 (stmt_list -> empty .)
    FLOAT           reduce using rule 19 (stmt_list -> empty .)
    STRING          reduce using rule 19 (stmt_list -> empty .)
    TRUE            reduce using rule 19 (stmt_list -> empty .)
    FALSE           reduce using rule 19 (stmt_list -> empty .)
    LPAREN          reduce using rule 19 (stmt_list -> empty .)
    LET             reduce using rule 19 (stmt_list -> empty .)
    RETURN          reduce using rule 19 (stmt_list -> empty .)
    IF              reduce using rule 19 (stmt_list -> empty .)
    WHILE           reduce using rule 19 (stmt_list -> empty .)
    LOOP            reduce using rule 19 (stmt_list -> empty .)
    BREAK           reduce using rule 19 (stmt_list -> empty .)


state 29

    (13) type -> AMP MUT type .

    RPAREN          reduce using rule 13 (type -> AMP MUT type .)
    COMMA           reduce using rule 13 (type -> AMP MUT type .)
    LBRACE          reduce using rule 13 (type -> AMP MUT type .)
    ASSIGN          reduce using rule 13 (type -> AMP MUT type .)
    SEMICOLON       reduce using rule 13 (type -> AMP MUT type .)


state 30

    (14) type -> AMP LIFETIME type .

    RPAREN          reduce using rule 14 (type -> AMP LIFETIME type .)
    COMMA           reduce using rule 14 (type -> AMP LIFETIME type .)
    LBRACE          reduce using rule 14 (type -> AMP LIFETIME type .)
    ASSIGN          reduce using rule 14 (type -> AMP LIFETIME type .)
    SEMICOLON       reduce using rule 14 (type -> AMP LIFETIME type .)


state 31

    (15) type -> AMP LIFETIME MUT . type
    (11) type -> . IDENT
    (12) type -> . AMP type
    (13) type -> . AMP MUT type
    (14) type -> . AMP LIFETIME type
    (15) type -> . AMP LIFETIME MUT type

    IDENT           shift and go to state 16
    AMP             shift and go to state 18

    type                           shift and go to state 59

state 32

    (5) fn_def -> FN IDENT LPAREN param_list RPAREN ARROW type block .

    FN              reduce using rule 5 (fn_def -> FN IDENT LPAREN param_list RPAREN ARROW type block .)
    $end            reduce using rule 5 (fn_def -> FN IDENT LPAREN param_list RPAREN ARROW type block .)


state 33

    (16) block -> LBRACE stmt_list RBRACE .

    FN              reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    $end            reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    RBRACE          reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    IDENT           reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    MINUS           reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    NOT             reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    AMP             reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    INTEGER         reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    FLOAT           reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    STRING          reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    TRUE            reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    FALSE           reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    LPAREN          reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    LET             reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    RETURN          reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    IF              reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    WHILE           reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    LOOP            reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    BREAK           reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)
    ELSE            reduce using rule 16 (block -> LBRACE stmt_list RBRACE .)


state 34

    (17) block -> LBRACE stmt_list expr . RBRACE
    (44) expr -> expr . OR expr
    (45) expr -> expr . AMP AMP expr
    (46) expr -> expr . EQ expr
    (47) expr -> expr . NEQ expr
    (48) expr -> expr . LT expr
    (49) expr -> expr . GT expr
    (50) expr -> expr . LEQ expr
    (51) expr -> expr . GEQ expr
    (52) expr -> expr . PLUS expr
    (53) expr -> expr . MINUS expr
    (54) expr -> expr . STAR expr
    (55) expr -> expr . SLASH expr
    (56) expr -> expr . PERCENT expr
    (69) expr -> expr . DOT IDENT LPAREN arg_list RPAREN
    (34) expr_stmt -> expr . SEMICOLON

    RBRACE          shift and go to state 60
    OR              shift and go to state 61
    AMP             shift and go to state 62
    EQ              shift and go to state 63
    NEQ             shift and go to state 64
    LT              shift and go to state 65
    GT              shift and go to state 66
    LEQ             shift and go to state 67
    GEQ             shift and go to state 68
    PLUS            shift and go to state 69
    MINUS           shift and go to state 70
    STAR            shift and go to state 71
    SLASH           shift and go to state 72
    PERCENT         shift and go to state 73
    DOT             shift and go to state 74
    SEMICOLON       shift and go to state 75


state 35

    (18) stmt_list -> stmt_list stmt .

    RBRACE          reduce using rule 18 (stmt_list -> stmt_list stmt .)
    IDENT           reduce using rule 18 (stmt_list -> stmt_list stmt .)
    MINUS           reduce using rule 18 (stmt_list -> stmt_list stmt .)
    NOT             reduce using rule 18 (stmt_list -> stmt_list stmt .)
    AMP             reduce using rule 18 (stmt_list -> stmt_list stmt .)
    INTEGER         reduce using rule 18 (stmt_list -> stmt_list stmt .)
    FLOAT           reduce using rule 18 (stmt_list -> stmt_list stmt .)
    STRING          reduce using rule 18 (stmt_list -> stmt_list stmt .)
    TRUE            reduce using rule 18 (stmt_list -> stmt_list stmt .)
    FALSE           reduce using rule 18 (stmt_list -> stmt_list stmt .)
    LPAREN          reduce using rule 18 (stmt_list -> stmt_list stmt .)
    LET             reduce using rule 18 (stmt_list -> stmt_list stmt .)
    RETURN          reduce using rule 18 (stmt_list -> stmt_list stmt .)
    IF              reduce using rule 18 (stmt_list -> stmt_list stmt .)
    WHILE           reduce using rule 18 (stmt_list -> stmt_list stmt .)
    LOOP            reduce using rule 18 (stmt_list -> stmt_list stmt .)
    BREAK           reduce using rule 18 (stmt_list -> stmt_list stmt .)


state 36

    (43) expr -> IDENT . ASSIGN expr
    (66) expr -> IDENT .
    (68) expr -> IDENT . LPAREN arg_list RPAREN

    ASSIGN          shift and go to state 76
    RBRACE          reduce using rule 66 (expr -> IDENT .)
    OR              reduce using rule 66 (expr -> IDENT .)
    AMP             reduce using rule 66 (expr -> IDENT .)
    EQ              reduce using rule 66 (expr -> IDENT .)
    NEQ             reduce using rule 66 (expr -> IDENT .)
    LT              reduce using rule 66 (expr -> IDENT .)
    GT              reduce using rule 66 (expr -> IDENT .)
    LEQ             reduce using rule 66 (expr -> IDENT .)
    GEQ             reduce using rule 66 (expr -> IDENT .)
    PLUS            reduce using rule 66 (expr -> IDENT .)
    MINUS           reduce using rule 66 (expr -> IDENT .)
    STAR            reduce using rule 66 (expr -> IDENT .)
    SLASH           reduce using rule 66 (expr -> IDENT .)
    PERCENT         reduce using rule 66 (expr -> IDENT .)
    DOT             reduce using rule 66 (expr -> IDENT .)
    SEMICOLON       reduce using rule 66 (expr -> IDENT .)
    RPAREN          reduce using rule 66 (expr -> IDENT .)
    LBRACE          reduce using rule 66 (expr -> IDENT .)
    COMMA           reduce using rule 66 (expr -> IDENT .)
    LPAREN          shift and go to state 77


state 37
